Fixed dark mode issues and added mini card grid to home screen

--- a/src/components/MiniCards/MiniCards.css
+++ b/src/components/MiniCards/MiniCards.css
@@ -1,5 +1,6 @@
 .card-container {
-  margin: 25%;
+  margin: 10%;
+  min-width: 300px;
 }
 
 .card-content {
